--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -24,12 +24,15 @@ unlimint-ui-form-container .unl-custom-body form {
 }
 
 unlimint-ui-form-container .unl-custom-footer {
-  background-color: #F2F2F2;
-  height: 92px;
+  background-color: #f2f2f2;
+  height: unset;
+  max-width: 100%;
+  padding: 20px 0;
+  column-gap: 34px;
 }
 
-unlimint-ui-form-container .unl-custom-footer svg + svg {
-  margin-left: 40px;
+unlimint-ui-form-container .unl-custom-footer svg {
+  height: 24px;
 }
 
 unlimint-ui-form-container .unl-custom-label-container {
@@ -54,7 +57,7 @@ unlimint-ui-form-container .unl-custom-label-control {
 
 unlimint-ui-form-container .unl-custom-label-control input {
   height: 44px;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
   border-radius: 4px;
   box-sizing: border-box;
   width: 100%;
@@ -70,11 +73,11 @@ unlimint-ui-form-container .unl-custom-label {
 }
 
 unlimint-ui-form-container .unl-custom-label-control.ng-invalid.ng-touched input {
-  border: 1px solid #FF3B30;
+  border: 1px solid #ff3b30;
 }
 
 unlimint-ui-form-container .unl-custom-label-control.ng-invalid.ng-touched.ng-focused input {
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
 }
 
 unlimint-ui-form-container .unl-custom-right-slot {
@@ -92,7 +95,7 @@ unlimint-ui-form-container .unl-custom-error {
 
 unlimint-ui-form-container .unl-custom-button {
   color: #000000;
-  background: #C9F73A;
+  background: #c9f73a;
   border-radius: 4px;
   height: 44px;
   width: 336px;
@@ -153,15 +156,15 @@ unlimint-ui-pay-form .unl-custom-checkbox-container {
   margin-bottom: 36px;
 }
 
-unlimint-ui-pay-form .unl-custom-checkbox-container input+span::before {
+unlimint-ui-pay-form .unl-custom-checkbox-container input + span::before {
   border-radius: 4px;
 }
 
-unlimint-ui-pay-form .unl-custom-checkbox-container input:focus+span::before {
+unlimint-ui-pay-form .unl-custom-checkbox-container input:focus + span::before {
   outline: none;
 }
 
-unlimint-ui-pay-form .unl-custom-checkbox-container input:checked+span::before {
+unlimint-ui-pay-form .unl-custom-checkbox-container input:checked + span::before {
   background-image: url("data:image/svg+xml,%3Csvg width='18' height='13' viewBox='0 0 18 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 1L6 12L1 7' stroke='%23ffffff' stroke-width='2' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
   background-color: #000000;
   border: none;
