--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,19 +1,22 @@
 /* Common styles */
 unlimint-ui-form-container .unl-custom-container {
-  background-color: #ffffff;
   display: flex;
   align-items: center;
+
   width: 100%;
   height: 100%;
+
+  background-color: #fff;
   box-shadow: none;
 }
 
 unlimint-ui-form-container .unl-custom-body {
-  height: 100%;
   display: flex;
   flex-wrap: wrap;
   align-content: center;
+
   width: 328px;
+  height: 100%;
   padding: 0;
 }
 
@@ -24,11 +27,13 @@ unlimint-ui-form-container .unl-custom-body form {
 }
 
 unlimint-ui-form-container .unl-custom-footer {
-  background-color: #f2f2f2;
-  height: unset;
-  max-width: 100%;
-  padding: 20px 0;
   column-gap: 34px;
+
+  max-width: 100%;
+  height: unset;
+  padding: 20px 0;
+
+  background-color: #f2f2f2;
 }
 
 unlimint-ui-form-container .unl-custom-footer svg {
@@ -36,8 +41,8 @@ unlimint-ui-form-container .unl-custom-footer svg {
 }
 
 unlimint-ui-form-container .unl-custom-label-container {
-  margin-bottom: 24px;
   width: 328px;
+  margin-bottom: 24px;
 }
 
 unlimint-ui-form-container .unl-custom-date-input {
@@ -51,25 +56,27 @@ unlimint-ui-form-container .unl-custom-cvv-input {
 
 unlimint-ui-form-container .unl-custom-label-control {
   height: auto;
-  border: none;
   padding: 0;
+  border: none;
 }
 
 unlimint-ui-form-container .unl-custom-label-control input {
-  height: 44px;
-  border: 1px solid #d9d9d9;
-  border-radius: 4px;
   box-sizing: border-box;
   width: 100%;
+  height: 44px;
   padding: 12px;
+
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
 }
 
 unlimint-ui-form-container .unl-custom-label {
-  font-size: 14px;
-  line-height: 20px;
-  font-weight: 500;
-  color: #000000;
   margin-bottom: 4px;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  color: #000;
 }
 
 unlimint-ui-form-container .unl-custom-label-control.ng-invalid.ng-touched input {
@@ -88,35 +95,39 @@ unlimint-ui-form-container .unl-custom-right-slot {
 unlimint-ui-form-container .unl-custom-error {
   height: auto;
   margin: 4px 0 0;
+
   font-size: 11px;
   line-height: 16px;
   color: #808080;
 }
 
 unlimint-ui-form-container .unl-custom-button {
-  color: #000000;
-  background: #c9f73a;
-  border-radius: 4px;
-  height: 44px;
   width: 336px;
-  margin-left: -4px;
+  height: 44px;
   margin-right: -4px;
+  margin-left: -4px;
+
   font-size: 17px;
   font-weight: 500;
+  color: #000;
+
+  background: #c9f73a;
+  border-radius: 4px;
 }
 
 unlimint-ui-form-container .unl-custom-button:hover {
-  color: #ffffff;
-  background: #000000;
+  color: #fff;
+  background: #000;
 }
 
 /* Card form styles */
 unlimint-ui-card-form .unl-form .unl-custom-card-form-title {
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 28px;
-  margin-bottom: 28px;
   width: 100%;
+  margin-bottom: 28px;
+
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 28px;
 }
 
 unlimint-ui-card-form .unl-custom-card-form-submit {
@@ -126,25 +137,28 @@ unlimint-ui-card-form .unl-custom-card-form-submit {
 /* Order styles */
 unlimint-ui-form-container .unl-custom-info-title {
   width: 100%;
-  font-weight: bold;
+
   font-size: 24px;
+  font-weight: bold;
   line-height: 28px;
-  color: #000000;
+  color: #000;
 }
 
 unlimint-ui-form-container .unl-custom-info-total {
   width: 100%;
   margin-top: 16px;
-  font-weight: 600;
+
   font-size: 16px;
+  font-weight: 600;
   line-height: 20px;
-  color: #000000;
+  color: #000;
 }
 
 unlimint-ui-form-container .unl-custom-info-order {
+  width: 100%;
   margin-top: 12px;
   margin-bottom: 32px;
-  width: 100%;
+
   font-size: 14px;
   line-height: 16px;
   color: #737373;
@@ -165,8 +179,8 @@ unlimint-ui-pay-form .unl-custom-checkbox-container input:focus + span::before {
 }
 
 unlimint-ui-pay-form .unl-custom-checkbox-container input:checked + span::before {
+  background-color: #000;
   background-image: url("data:image/svg+xml,%3Csvg width='18' height='13' viewBox='0 0 18 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 1L6 12L1 7' stroke='%23ffffff' stroke-width='2' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-  background-color: #000000;
   border: none;
 }
 
