--- a/assets/styles/modal.css
+++ b/assets/styles/modal.css
@@ -1,16 +1,16 @@
 /* Modal styles */
 .modal {
-  visibility: hidden;
-  opacity: 0;
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  inset: 0;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.35);
+
+  visibility: hidden;
+  opacity: 0;
+  background: rgb(0 0 0 / 35%);
+
   transition: all 0.4s;
 }
 
@@ -20,29 +20,32 @@
 }
 
 .modal__content {
-  border-radius: 4px;
   position: relative;
+
   width: 360px;
   max-width: 90%;
-  background: #fff;
   padding: 52px;
+
+  background: #fff;
+  border-radius: 4px;
 }
 
 .modal__content hr {
+  height: 1px;
   margin-top: 8px;
   margin-bottom: 8px;
-  border: 0;
-  height: 1px;
+
   background: #e5e5e5;
+  border: 0;
 }
 
 .modal__content a {
+  color: #000;
   text-decoration: none;
-  color: #000000;
 }
 
 .modal__content a:visited {
-  color: #000000;
+  color: #000;
 }
 
 .modal__footer a {
@@ -50,10 +53,12 @@
 }
 
 .modal-menu-item {
-  height: 48px;
+  cursor: pointer;
+
   display: flex;
   align-items: center;
-  cursor: pointer;
   justify-content: space-between;
+
+  height: 48px;
   margin: 0 20px 0 4px;
 }
